--- a/index.css
+++ b/index.css
@@ -1,13 +1,15 @@
 * {
-    padding: 0;
-    margin: 0;
+  padding: 0;
+  margin: 0;
 }
 
-body, html {
-    width: 100%;
-    height: 100%;
+body,
+html {
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
 }
 
 canvas {
-    background-color: cornflowerblue;
+  background-color: cornflowerblue;
 }
